--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-body-classname": "^1.3.1",
     "react-dom": "^18.2.0",
     "react-fluid-animation": "^1.0.1",
+    "react-iframe": "^1.8.5",
     "react-notion-x": "^6.15.6",
     "react-tweet-embed": "^2.0.0",
     "react-use": "^17.3.2",
